[gd_scene load_steps=5 format=3 uid="uid://dbtfpuya5aq1d"]

[ext_resource type="Script" path="res://scenes/level_elements/mechanics/switch.gd" id="1_5vdts"]
[ext_resource type="Texture2D" uid="uid://c5tn8c64sombf" path="res://assets/mechanics/switch_background0.png" id="1_ql1yd"]
[ext_resource type="Texture2D" uid="uid://bb840p140fssb" path="res://assets/mechanics/switch_dynamic0.png" id="2_rq6tm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_la2j1"]
size = Vector2(2, 35)

[node name="Switch" type="StaticBody2D" groups=["input_mechanic", "mechanic"]]
position = Vector2(0, 7)
collision_mask = 0
script = ExtResource("1_5vdts")

[node name="Background0" type="Sprite2D" parent="."]
position = Vector2(-17, -8)
texture = ExtResource("1_ql1yd")
centered = false

[node name="Dynamic0" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(0, 8)
texture = ExtResource("2_rq6tm")
centered = false
offset = Vector2(-6, -29)

[node name="BaseCollision0" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-9, 2, 9, 2, 0, 11)

[node name="InteractionArea0" type="Area2D" parent="." groups=["input_mechanic_interaction_area"]]
collision_layer = 64
collision_mask = 8

[node name="ActivateCollision0" type="CollisionShape2D" parent="InteractionArea0"]
position = Vector2(0, 19.5)
shape = SubResource("RectangleShape2D_la2j1")

[connection signal="area_entered" from="InteractionArea0" to="." method="_on_interaction"]
